Avicenna Dependency Injection Framework
---------------------------------------

Author: Kamran Amini  <kam.cpp@gmail.com>

Version 1.6:
  - License changed to Apache License Version 2.0 .
  - Support for Qualifiers have been added.

Version 1.5:
  - DependencyIdentifier class has been added. It is used to detect generic types
    in fields or method return types. Relevant tests have been added.
  - Validation exceptions have been written. Also, relevant tests have been added.

Version 1.4:
  - Support for javax.inject.Inject and javax.enterprise.Produces has been removed.

Version 1.3.1:
  - Scope of Java EE 6 API dependency is changed to provided.

Version 1.3:
  - Some typing errors are corrected.
  - Support for javax.inject.Inject and javax.enterprise.Produces has been added.