@@ -5,4 +5,5 @@
 - Concurrent access support [TODO]
 - External JSON configuration [TODO]
 - Lifecycle Listeners [TODO]
-- Ignoring already added dependency factories [TODO]
+- Ignoring already added dependency factories [DONE]
+- Making Logs [TODO]
