@@ -6,6 +6,7 @@ Author: Kamran Amini  <kam.cpp@gmail.com>
 Version 1.6:
   - License changed to Apache License Version 2.0 .
   - Support for Qualifiers have been added.
+  - Avicenna will not accept duplicate dependency factories.
 
 Version 1.5:
   - DependencyIdentifier class has been added. It is used to detect generic types
